# GAGA-Client

./: .env.example  .eslintignore  .gitignore  README.md  eslint.config.js  jest.config.js  package-lock.json  package.json  tsconfig.app.json  tsconfig.test.json  代码结构说明.md
.github/workflows/: build.yml
src/: App.css  App.tsx  config.ts  index.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  logger.rs  utils.rs
src/__tests__/: api.test.ts
src/api/: index.ts
src/components/: ACCESSIBILITY.md  DropZone.tsx  ErrorAlert.tsx  ErrorBoundary.tsx  LoadingSpinner.tsx  LogViewer.tsx  TaskCard.tsx  Toolbar.tsx
src/components/layout/: AppLayout.tsx
src/components/ui/: CustomSelect.tsx  MacButton.tsx  MacCard.tsx
src/hooks/: index.ts  useDownload.ts
src/pages/: AuthPage.tsx  HistoryPage.tsx  LogPage.tsx  SettingsPage.tsx  TaskPage.tsx
src/styles/: downie-theme.ts  interactions.css
src/types/: api.d.ts  config.ts  history.ts  task.ts
src/utils/: auth.ts  deviceId.ts  download.ts  drm.ts  history.ts  logger.ts  navigation.ts  settings.ts  windowManager.ts
